Bonus, tabelas e links externos

--- a/index.html
+++ b/index.html
@@ -11,5 +11,31 @@
         <h1 id="titulo">Lições aprendidas - Trybe!</h1>
     </header>
     <img src="thumbnail_Sem título.jpg" alt="Estudante da Trybe" id="minha_foto">
+    <main>
+        <section>
+            <table>
+                <tr>
+                    <th>Links Pessoais</th>
+                </tr>
+                <tr>
+                    <td>Trabalho</td>
+                    <td><a href="https://www.linkedin.com/in/caue-santos-lopes/">Linkedin</a></td>
+                </tr>
+                <tr>
+                    <td>Projetos</td>
+                    <td><a href="https://github.com/kitoyppd23">Github</a></td>
+                </tr>
+                <tr>
+                    <td>Portifólio</td>
+                    <td><a href="https://kitoyppd23.github.io/Portfolio/">In Progress</a></td>
+                </tr>
+                <tr>
+                    <td>Pessoal</td>
+                    <td><a href="https://www.instagram.com/lopzcaue/?hl=pt-br">Instagram</a></td>
+                </tr>
+            </table>
+        </section>
+    </main>
+
 </body>
-</html>
+</html>    
