Adicionando lista ordenada com liçoes aprendidas

--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
 
   <main>
     <img id="minha_foto" src="/images/leo-pic.png" alt="Foto de Leonardo Majevski">
+
+    <section>
+      <h2>Licões</h2>
+      <ol id="licoes_aprendidas">
+        <li>Unix, Bash e Shell Script</li>
+        <li>Git, GitHub e Internet</li>
+        <li>HTML e CSS</li>
+        <li>JavaScript</li>
+        <li>React</li>
+        <li>Node</li>
+        <li>SQL</li>
+        <li>MongoDB</li>
+        <li>Metodologias Ágeis</li>
+        <li>Inteligência emocional e Liderança</li>
+      </ol>
+    </section>
+
   </main>
 </body>
 </html>
