Décimo Requisito: Adiciona tag <nav>

--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Projeto | Lessons Learned</title>
-  <link rel="stylesheet" type="text/css" href="./style.css">
+  <link rel="stylesheet" type="text/css" href="./style.css" />
 </head>
 
 <body>
   <header id="cabecalho">
     <h1 id="titulo">Lições Aprendidas - Trybe</h1>
+    <nav>
+      <a href="#">Página Inicial</a>
+      <a href="#">Contato</a>
+    </nav>
   </header>
-  <img src="./me.jpg" alt="Foto de Thiago Granville" id="minha_foto">
+  <img src="./me.jpg" alt="Foto de Thiago Granville" id="minha_foto" />
   <a href="https://github.com/ThiagoGranville/" target="_blank">Github</a>
   <ol id="licoes_aprendidas">
     <li>Unix</li>
@@ -39,16 +43,23 @@
     <li>SQL</li>
   </ul>
   <article>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis optio quis officia perferendis. Esse
-      consectetur tenetur aspernatur voluptas explicabo, cumque inventore ut neque? Temporibus dicta possimus ipsum
-      sunt Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, deserunt. Eveniet, amet perferendis
-      consequuntur libero velit dolore, atque itaque quis placeat ipsum accusantium, asperiores nihil dolorem.
-      Molestiae sapiente non pariatur.</p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis optio
+      quis officia perferendis. Esse consectetur tenetur aspernatur voluptas
+      explicabo, cumque inventore ut neque? Temporibus dicta possimus ipsum
+      sunt Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe,
+      deserunt. Eveniet, amet perferendis consequuntur libero velit dolore,
+      atque itaque quis placeat ipsum accusantium, asperiores nihil dolorem.
+      Molestiae sapiente non pariatur.
+    </p>
   </article>
   <aside>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis optio quis officia perferendis. Esse
-      consectetur tenetur aspernatur voluptas explicabo, cumque inventore ut neque? Temporibus dicta possimus ipsum
-      sunt Lorem ipsum dolor.</p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis optio
+      quis officia perferendis. Esse consectetur tenetur aspernatur voluptas
+      explicabo, cumque inventore ut neque? Temporibus dicta possimus ipsum
+      sunt Lorem ipsum dolor.
+    </p>
   </aside>
   <footer id="rodape"></footer>
 </body>
