--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 
 <body>
     <header id="cabecalho">
-        <h1 id="titulo">Ana Luiza Machado Salgado</h1>
+        <h1 id="titulo">Lições aprendidas na <a href="https://www.betrybe.com/" target="_blank">Trybe</a></h1>
     </header>
 
 <main>
-    <section><img id="minha_foto" src="Ana.png" alt="Foto de Ana Luiza Machado Salgado">
+    <section>
+        <img id="minha_foto" src="Ana.png" alt="Foto de Ana Luiza Machado Salgado" width=20%>
+        <h2><a href="https://www.linkedin.com/in/analuizamsalgado/" target="_blank">Ana Luiza Machado Salgado</a></h2>
     </section>
 
-    <section> 
+    <section>
         <ol id="licoes_aprendidas">
             <li>Unix & Bash</li>
             <li>Git</li>
