[10] - Deixando HTML semântico

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <body>
   <header id="cabecalho">
     <h1 id="titulo">Lessons Learned - Trybe</h1>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+      </ul>
+    </nav>
   </header>
   <img id="minha_foto" src="/natalianegreiros.jpeg" alt="Foto de Natália">
   <h2>Lições</h2>
