--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1 id="titulo">Lessons Learned</h1>
   </header>
 
+  <img id="minha_foto" src="/rsz_1img_20200517_133641.jpg" alt="">
 </body>
 
 </html>
