--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
                     </ul>
               </section>
 
+              <article id="artigo-aprendizado">
+                  <h1>Ser um tryber</h1>
+                  <p>Estou apenas na terceira semana de estudos na Trybe, e ja estou fazendo o primeiro projeto, que é justamente essa página web. Durante essas semanas consegui entender o funcionamento do git/github, de forma pratica e clara e a utilizar o terminal. Vimos o básico de HTML e CSS, e ja posso contruir páginas sem problemas. Sei que ainda tem muito por vir, e a proxima lição será sobre Javascript. Mal posso esperar para me tornar um desenvolvedor Web Full Stack Jr e trabalhar para mundo 🗺️.</p>
+              </article>
+
               <p>Para conhecer meus trabalhos acesse o meu <a href="https://github.com/saulokirchmaier" target="_blank">Github</a>, e para saber um pouco mais sobre mim acesse o meu <a href="https://www.linkedin.com/in/saulokirchmaier/" target="_blank">LinkedIn</a></p>
           </main>
 
