--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
             <li>item7</li>
             <li>item8</li>
             <li>item9</li>
-            <li>item10</li> 
+            <li>item10</li>
         </ul>
+
+        <a href="https://www.betrybe.com/" target="_blank">#beTrybe</a>
     </main>
 
     <footer id="rodape">
