--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
          <main class="main">
             <h3><p class="fas fa-book contentIcons"></p>Aprendizado no curso  da Trybe</h3>
                <article class="lado-esquerdo">
-                <br>                  <p> Passaram-se duas semanas desde que inicie mi camino aqui, na Trybe. Un trecho lleno de enseçanzas fructiferas y bastantes satisfactorios en terminos de aprendizaje. Não sabia que poderia ficar tanto tempo grudado no computador estudando conteúdos que não conhecia havia meses. Os instrutores e equipe envolvida são excelentes e nos deixam bem confortáveis com o processo todo de aprendizagem, apesar de ser assustador as vezes, a quantidade de informações que precisamos aprender em um curto espaço de tempo. No final, consegui ficar totalmente focado no material oferecido. </p>
+                <p> Passaram-se duas semanas desde que inicie mi camino aqui, na Trybe. Un trecho lleno de enseçanzas fructiferas y bastantes satisfactorios en terminos de aprendizaje. Não sabia que poderia ficar tanto tempo grudado no computador estudando conteúdos que não conhecia havia meses. Os instrutores e equipe envolvida são excelentes e nos deixam bem confortáveis com o processo todo de aprendizagem. </p>
                </article>
                
                <h3><p class="fas fa-shapes contentIcons"></p>Sobre aprendizado</h3>  
