Requisito 5 - Adicionado lista não ordenada de lições a aprender

--- a/index.html
+++ b/index.html
@@ -21,5 +21,17 @@
         <li>Colaboração</li>
         <li>Empatia</li>
     </ol>
+    <ul id="licoes_a_aprender">
+        <li>Javascript</li>
+        <li>Sql</li>
+        <li>Nosql</li>
+        <li>Mysql</li>
+        <li>MongoDB</li>
+        <li>Nodejs</li>
+        <li>Express</li>
+        <li>React</li>
+        <li>Python</li>
+        <li>Lógica de programação</li>
+    </ul>
 </body>
 </html>
