Décimo Requisito: Adiciona tag <section>

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <li>Node</li>
     <li>SQL</li>
   </ul>
+  <section>
   <article>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis optio
@@ -61,6 +62,7 @@
       sunt Lorem ipsum dolor.
     </p>
   </aside>
+  </section>
   <footer id="rodape"></footer>
 </body>
 </html>
