--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
       <article>
           <p>Reforçei tudo o sabia de linux, aprendi ferramentas ótimas de comunicação como Zomm e slack que irão me ajudar muito na minha caminhadada. Aprendi Git e GitHub para controlar o versionamento do meu código e por fim HTML para estruturar minhas páginas, CSS para estiliza-las e Semantic HTML para melhorar a navegabilidade e auxiliar a acessibilidade. </p>
       </article>
+      <aside>
+          <p>Comecei minha jornada em TI com 9 anos estudando Windowns 95 e office 95 e outros, com 12 anos fiz um curso por revista na banca de jornal de manutenção e instalação de softwares, com 17 anos fiz um courso técnico de manutenção e instalação de softwares.Aos 19 fiz gradução em Análise de Sistema na Puc-Campinas e atualmente em 2020 iniciei Desenvolvimento web na Trybe. VQV!</p>
+      </aside>
       <footer id="rodape">
       </footer>
   </body>
