Passo 3 + Correçoes - Adicionado imagem; corrigido identeçao para 2 espaços e corrigido referencia do Header no CSS de Classe para ID.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <header id="cabeçalho">
             <h1>Lições aprendidas - Trybe!</h1>
         </header>
+        <img src="imagens/Max.jpg" alt="Imagem de perfil do Maximilian Kaden">
     </body>
 </html>
