Requisito 5 - lista de lições a aprender

--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
         <li>Slack</li>
         <li>inteligência emocional</li>
       </ol>
+      <ul id="licoes_a_aprender">
+        <li>CSS responsivos</li>
+        <li>JavaScript</li>
+        <li>Forms</li>
+        <li>React</li>
+        <li>Testes automatizados</li>
+        <li>Node</li>
+        <li>SQL</li>
+        <li>Mongo</li>
+        <li>Express</li>
+        <li>Algoritmos e estrutura de dados</li>
+      </ul>
     </section>
   </main>
 </body>
