--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
         <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
     </header>
 
+    <main>
+        <img src="Assets/fotoPerfil.jpg" alt="Foto de um homem de frente" id="fotoPerfil">
+    </main>
 </body>
 </html>
