--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <nav>
+    <ul>
+      <li><a href="minha_foto">Home</a></li>
+    </ul>
+  </nav>
   <header id="cabecalho">
     <h1 id="titulo">Lições Aprendidas - Trybe</h1>
   </header>
