--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
             </ul>
         </nav>
     </header>
-    <div id="img">
-        <img src="rsz_20201004_155453.jpg" alt="Foto-minha" id="minha_foto">
-    </div>
     <main>
         <article>
             <section>
@@ -36,6 +33,16 @@
             </section>
             <section>
                 <ul id="licoes_a_aprender">
+                    <li>Javascript</li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
                 </ul>
             </section>
         </article>
