Adicionar requisito - 8 count = 600

--- a/index.html
+++ b/index.html
@@ -40,10 +40,39 @@
             <li>Context API</li>
             <li>React Hooks</li>https://github.com/gabrielgarciamendonca/gabrielgarciamendonca/edit/main/README.md
         </ul>
+        <article>
+            <!--https://gabrielgarciamendonca.github.io/   |   Meu portfólio foi utilizado para buscar alguns textos acerca dos locais no qual eu estudei.-->
+            <h2>Historico</h2>
+            <section>
+                <h3>2019</h3>
+                <p><strong>Escola: </strong>IFSP</p>
+                <p><strong>Curso: </strong>Análise e Desenvolvimento de Sistemas.</p>
+                <p><strong>Conclusão: </strong>2022</p>
+                <p><strong>Situação: </strong>Trancado</p>
+                <p><strong>Descrição: </strong>O Instituto Federal de Educação, ciência e tecnologia de São Paulo é um
+                    instituto
+                    focado e perfeito, e além do mais, em constante contato com a tecnologia de ponta.</p>
+            </section>
+            <section>
+                <h3>2020</h3>
+                <p><strong>Escola: </strong>Trybe</p>
+                <p><strong>Curso: </strong>Desenvolvedor de Software</p>
+                <p><strong>Conclusão: </strong>2021</p>
+                <p><strong>Situação: </strong>Cursando</p>
+                <p><strong>Descrição: </strong>A Trybe é uma escola para pessoas que querem construir uma carreira de
+                    sucesso em tecnologia e que se compromete
+                    integralmente com seus estudantes, pois as pessoas só pagam quando conseguirem um bom trabalho./p>
+            </section>
+        </article>
     </main>
     <footer id="rodape">
 
-        <!--https://github.com/gabrielgarciamendonca/gabrielgarciamendonca/edit/main/README.md  | Utilizado para buscar o endereço da imagem do icone do linkedin-->
+        <!--https://github.com O
+                    programa conta com
+                    mais de 1.500 horas de aulas presenciais e online e aborda introdução ao desenvolvimento de
+                    software, front-end,
+                    back-end, ciência da computação, engenharia de software, metodologias ágeis e habilidades
+                    comportamentais.</gabrielgarciamendonca/gabrielgarciamendonca/edit/main/README.md  | Utilizado para buscar o endereço da imagem do icone do linkedin-->
         <a href="https://www.linkedin.com/in/mendoncag/" target="_Blank"><img
                 src="https://img.shields.io/badge/linkedin-%230077B5.svg?&style=for-the-badge&logo=linkedin&logoColor=white" /></a>
     </footer>
