--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="style.css">
-    <title>Lessons Learned | Trybe</title>
+   <title>Lessons Learned | Trybe</title>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
   </head>
- 
   <body>
         <header id="cabecalho">
             <h1 id="titulo">Lessons Learned | Trybe</h1>
         </header>
-    
+        <main>
+            <img id="minha_foto" src="pamela.jpeg" alt="Foto de Pamela Anderson Sales">
+        </main>
   </body>
 </html>
