adicionando requisito 8 - artigo sobre aprendizado

--- a/index.html
+++ b/index.html
@@ -13,31 +13,41 @@
     </header>
 
     <main>
-        <ol id="licoes_aprendidas">
-            <li>Unix</li>
-            <li>Git</li>
-            <li>GitHub</li>
-            <li>Empatia</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Slack</li>
-            <li>Zoom</li>
-            <li>Inspect</li>
-            <li>Semantic HTML</li>
-        </ol>
+        <table id="licoes">
+            <td>
+                <ol id="licoes_aprendidas">
+                    <li>Unix</li>
+                    <li>Git</li>
+                    <li>GitHub</li>
+                    <li>Empatia</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Slack</li>
+                    <li>Zoom</li>
+                    <li>Inspect</li>
+                    <li>Semantic HTML</li>
+                </ol>
+            </td>
+            
+            <td>
+                <ul id="licoes_a_aprender">
+                    <li>JavaScript</li>
+                    <li>DOM</li>
+                    <li>Forms</li>
+                    <li>CSS Responsive</li>
+                    <li>ES6</li>
+                    <li>Python</li>
+                    <li>Unit Tests</li>
+                    <li>React</li>
+                    <li>NodeJS</li>
+                    <li>SQL</li>
+                </ul>
+            </td>
+        </table>
 
-        <ul id="licoes_a_aprender">
-            <li>JavaScript</li>
-            <li>DOM</li>
-            <li>Forms</li>
-            <li>CSS Responsive</li>
-            <li>ES6</li>
-            <li>Python</li>
-            <li>Unit Tests</li>
-            <li>React</li>
-            <li>NodeJS</li>
-            <li>SQL</li>
-        </ul>
+        <article>
+            <p>Meu aprendizado na Trybe esta sendo incrível, eu não imaginava que em menos de um mês de curso estaria com tanto conhecimento tão bem consolidado já aprendemos Unix, Git, GitHub Html, CSS e HTML Semântico. E agora estamos no primeiro projeto e está indo muito bem, acredito que em breve as coisas ficarão mais difíceis, mas nada que um pouco de mais de dedicação e estudos fora do horário do curso não resolvam. :-)</p>
+        </article>
     </main>
 
     <footer id="rodape">
