Requisito 6 - adicionado o rodapé

--- a/index.html
+++ b/index.html
@@ -41,5 +41,8 @@
       </ul>
     </section>
   </main>
+  <footer id="rodape">
+    Desenvolvido especialmente por Marcus Lima Witthoeft.
+  </footer>
 </body>
 </html>
