--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<header id="cabecalho">
-			<h1 id="titulo">Lições aprendidas - Trybe</h1>
-		</header>
+      <h1 id="titulo">Lições aprendidas - Trybe</h1>
+      <img id="minha_foto" src="./foto-Ivan.jpg" alt="minha-foto" width="300">      
+    </header>
 	</body>
 </html>
