--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1 id="cabecalho"> Lições Aprendidas - Trybe!</h1>
+    <header id="cabecalho"> <h1 id="titulo">Lições Aprendidas - Trybe!</h1></header>
 </body>
 </html>
