--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <body>
       <header id="cabecalho">
           <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+          <nav id="menu_link">
+              <a href="">Home</a>
+              <a href="">Login</a>
+          </nav>
       </header>
       <img id="minha_foto" src="retrato1.png" alt="foto rafael azevedo">
       <a  href="https://github.com/RafaelBiatoAzevedo">Rafael Azevedo</a>
