--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições Aprendidas</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Pagina Inicial</a></li>
+                <li><a href="https://www.linkedin.com/in/brunobrolesi/" target="_black">LinkedIn</a></li>
+            </ul>
+        </nav>
     </header>
     <section>
         <img id="minha_foto" src="assets/img/perfil.jpeg" alt="Foto do Bruno">
