--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-       <header id="cabecalho">
+    <header id="cabecalho">
         <h1 id="titulo">Lições aprendidas- Trybe!!!</h1>
-       </header> 
+    </header> 
+    <article>
+        <section>
+            <img id="minha_foto" src="WhatsApp Image 2020-11-13 at 11.58.02 PM (3).jpeg" alt="Foto do Bernardo">
+        </section>
 
-    </body>
-    </html>
+    </article>    
+</body>
+    </html> 
