Adicionando lista nao ordenada com liçoes a  aprender

--- a/index.html
+++ b/index.html
@@ -14,22 +14,39 @@
   </header>
 
   <main>
-    <img id="minha_foto" src="/images/leo-pic.png" alt="Foto de Leonardo Majevski">
+    <figure>
+      <img id="minha_foto" src="/images/leo-pic.png" alt="Foto de Leonardo Majevski">
+      <figcaption class="profile-pic">Leonardo Majevski</figcaption>
+    </figure>
 
     <section>
-      <h2>Licões</h2>
+      <h2>Licões aprendidas</h2>
       <ol id="licoes_aprendidas">
+        <li>Zoom</li>
+        <li>Slack</li>
         <li>Unix, Bash e Shell Script</li>
-        <li>Git, GitHub e Internet</li>
-        <li>HTML e CSS</li>
+        <li>Git</li>
+        <li>Github</li>
+        <li>Como funciona a internet</li>
+        <li>Inspecionar elementos na DOM</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>HTML Semantico</li>
+      </ol>
+
+      <h2>Lições a aprender</h2>
+      <ul id="licoes_a_aprender">
         <li>JavaScript</li>
         <li>React</li>
         <li>Node</li>
         <li>SQL</li>
         <li>MongoDB</li>
+        <li>Sockets</li>
+        <li>Python</li>
         <li>Metodologias Ágeis</li>
         <li>Inteligência emocional e Liderança</li>
-      </ol>
+        <li></li>
+      </ul>
     </section>
 
   </main>
