Requisito 6 - Adicionado rodapé na página

--- a/index.html
+++ b/index.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <title>Projeto Lições Aprendidas</title>
+  <meta charset="UTF-8">
+  <title>Projeto Lições Aprendidas</title>
 </head>
 <body>
-    <header id="cabecalho">
-        <h1 id="titulo">Lições Aprendidas - Projeto 1</h1>
-    </header>
-    <img src="rodrigofarias.jpeg" alt="Foto de Rodrigo Farias" id="minha_foto">
-    <ol id="licoes_aprendidas">
-        <li>Unix</li>
-        <li>Bash</li>
-        <li>Git</li>
-        <li>Github</li>
-        <li>Html</li>
-        <li>Css</li>
-        <li>Zoom</li>
-        <li>Slack</li>
-        <li>Colaboração</li>
-        <li>Empatia</li>
-    </ol>
-    <ul id="licoes_a_aprender">
-        <li>Javascript</li>
-        <li>Sql</li>
-        <li>Nosql</li>
-        <li>Mysql</li>
-        <li>MongoDB</li>
-        <li>Nodejs</li>
-        <li>Express</li>
-        <li>React</li>
-        <li>Python</li>
-        <li>Lógica de programação</li>
-    </ul>
+  <header id="cabecalho">
+    <h1 id="titulo">Lições Aprendidas - Projeto 1</h1>
+  </header>
+  <img src="rodrigofarias.jpeg" alt="Foto de Rodrigo Farias" id="minha_foto">
+  <ol id="licoes_aprendidas">
+    <li>Unix</li>
+    <li>Bash</li>
+    <li>Git</li>
+    <li>Github</li>
+    <li>Html</li>
+    <li>Css</li>
+    <li>Zoom</li>
+    <li>Slack</li>
+    <li>Colaboração</li>
+    <li>Empatia</li>
+  </ol>
+  <ul id="licoes_a_aprender">
+    <li>Javascript</li>
+    <li>Sql</li>
+    <li>Nosql</li>
+    <li>Mysql</li>
+    <li>MongoDB</li>
+    <li>Nodejs</li>
+    <li>Express</li>
+    <li>React</li>
+    <li>Python</li>
+    <li>Lógica de programação</li>
+  </ul>
+  <footer id="rodape">Rodapé</footer>
 </body>
 </html>
