--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           </nav>
       </header>
       <img id="minha_foto" src="retrato1.png" alt="foto rafael azevedo">
-      <a  href="https://github.com/RafaelBiatoAzevedo">Rafael Azevedo</a>
+      <a  href="https://github.com/RafaelBiatoAzevedo" target="_blanc">Rafael Azevedo</a>
       <ol id="licoes_aprendidas">
           <li>Unix</li>
           <li>Git</li>
