--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <main>
         <img id="minha_foto" src="foto.jpg" alt="Foto Felipe Rocha">
         <section>
+            <h2>Lições</h2>
             <ol id="licoes_aprendidas">
                 <li>Unix</li>
                 <li>Shell</li>
@@ -39,6 +40,13 @@
                 <li>Unit Tests</li>
             </ul>
         </section>
+        <article>
+            <p>No dia 9 de novembro iniciei minha jornada na <a href="https://www.betrybe.com/" target="_blank">Trybe</a>, uma escola para pessoas que querem construir uma carreira como desenvolvedor full stack. O diferencial que me fez optar pela Trybe é o seu comprometimento com os alunos, no qual os mesmos podem optar pelo pagamento através do modelo de sucesso compartilhado.</p>
+            <p>Durante as três semanas iniciais aprendemos sobre os fundamentos do desenvolvimento web, Unix, Git, Github, funcionamento da internet, HTML e CSS. Realizamos a criação da primeiras páginas HTML, que são o primeiro passo para se tornar um desenvolvedor web full stack.</p>
+        </article>
     </main>
+    <footer id="rodape">
+        <p>Todos os direitos reservados, Felipe Rocha</p>
+    </footer>
 </body>
 </html>
