--- a/index.html
+++ b/index.html
@@ -1,29 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header id="cabecalho">
-        <h1 id="titulo"></h1>
+      <h1 id="titulo"> Meu 1º projeto na <strong>TRYBE</strong>: lições aprendidas</h1>
     </header>
-    <img id="minha_foto" src="rsz_genadi-imagem.jpg" alt=" homem em uma pista de corrida">
+    <nav id="links-navegacao">
+      <a href="https://genadireuben.github.io/" target="_blank"
+        >Meu portifólio no GitHub</a
+      >
+      <a href="https://br.linkedin.com/in/genadi-reuben" target="_blank"
+        >Meu Linkedin</a
+      >
+    </nav>
+    <img
+      id="minha_foto"
+      src="rsz_genadi-imagem.jpg"
+      alt=" homem em uma pista de corrida"
+    />
+    <h3>Lições aprendidas</h3>
     <ol id="licoes_aprendidas">
-        <H3>Lições aprendidas</H3>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
 
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
     </ol>
-</body>
+    <ul id="licoes_a_aprender">
+      <h3>Lições a serem aprendidas</h3>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+    <article id="artigo">
+<Section>
+
+</Section>
+<section>
+
+</section>
+    </article>
+    <aside></aside>
+    <footer id="rodape">Todos os direitos reservados, Genadí.</footer>
+  </body>
 </html>
