Corrigindo target blank

--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
                 </tr>
                 <tr>
                     <td>Trabalho</td>
-                    <td><a href="https://www.linkedin.com/in/caue-santos-lopes/">Linkedin</a></td>
+                    <td><a href="https://www.linkedin.com/in/caue-santos-lopes/" target="_blank">Linkedin</a></td>
                 </tr>
                 <tr>
                     <td>Projetos</td>
-                    <td><a href="https://github.com/kitoyppd23">Github</a></td>
+                    <td><a href="https://github.com/kitoyppd23" target="_blank">Github</a></td>
                 </tr>
                 <tr>
                     <td>Portifólio</td>
-                    <td><a href="https://kitoyppd23.github.io/Portfolio/">In Progress</a></td>
+                    <td><a href="https://kitoyppd23.github.io/Portfolio/" target="_blank">In Progress</a></td>
                 </tr>
                 <tr>
                     <td>Pessoal</td>
-                    <td><a href="https://www.instagram.com/lopzcaue/?hl=pt-br">Instagram</a></td>
+                    <td><a href="https://www.instagram.com/lopzcaue/?hl=pt-br" target="_blank">Instagram</a></td>
                 </tr>
             </table>
         </section>
