Requisitos 07 - Adicionando link externo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header id="cabecalho">
         <h1 id="titulo">Project Lessons Learned</h1>
     </header>
-    <img src="minha_foto.jpg" alt="Foto de Nathália Veneziano">
+    <img src="minha_foto.jpg" alt="Foto de Nathália Veneziano" id="minha_foto">
     <ol id="licoes_aprendidas">
         <li>Unix</li>
         <li>Git</li>
@@ -35,6 +35,8 @@
         <li>Node</li>
         <li>SQL</li>
     </ul>
-    <footer id="rodape"></footer>
+    <footer id="rodape">
+        Feito com 💚 por <a href="https://github.com/nathaliaveneziano" target="_blank">Nathália Veneziano</a>
+    </footer>
 </body>
 </html>
