Adiciona rodape e article

--- a/index.html
+++ b/index.html
@@ -5,22 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lessons Learned Trybe :rocket:</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-</head id="cabecalho">
-    <h1 id="titulo">Luciano Rodrigues Lodi</h1>
-    <img id="minha_foto" src="Luciano Lodi.jpg" alt="Foto de Luciano Lodi">
 </head>
+    <header id="cabecalho"><h1 id="titulo">LUCIANO LODI</h1>
+        <img id="minha_foto" src="Luciano Lodi.jpg" alt="Foto de Luciano Lodi">
+    </header>
 <body>
-    <ol id="licoes_aprendidas">O que aprendi:</ol>
-    <li>Unix</li>
-    <li>Bash</li>
-    <li>Versionamento com Git e Github</li>
-    <li>Criar páginas com HTML</li>
-    <li>Estilizar páginas com CSS</li>
-    <li>Box Model</li>
-    <li>Acessibilidade com HTML Semântico</li>
-    <li>O Stomatopoda é um bicho muito doido!</li>
-    <li>A Trybe é demais!</li>
-    <li>A Turma 09 é sensacional! (Oliva que disse)</li>
+    <section>
+        <ol id="licoes_aprendidas">O que aprendi:</ol>
+            <li>Unix</li>
+            <li>Bash</li>
+            <li>Versionamento com Git e Github</li>
+            <li>Criar páginas com HTML</li>
+            <li>Estilizar páginas com CSS</li>
+            <li>Box Model</li>
+            <li>Acessibilidade com HTML Semântico</li>
+            <li>O Stomatopoda é um bicho muito doido!</li>
+            <li>A Trybe é demais!</li>
+            <li>A Turma 09 é sensacional! (Oliva que disse)</li>
+    </section>
+    <section>
+        <ul id="licoes_a_aprender">O que ainda quero (e vou) aprender:</ul>
+        <li>Agilidade para codar</li>
+        <li>Codar de forma amigável e legível</li>
+        <li>Ferramentas de SEO</li>
+        <li>Python</li>
+        <li>JavaScript</li>
+        <li>Soft Skills para o trabalho e para a vida</li>
+        <li>Bases de Dados</li>
+        <li>React</li>
+        <li>Metodologias ágeis</li>
+        <li>Sotaque mineiro</li>
+    </section>
+    <section>
+        <article>
+            <p>Disseram que seria puxado, avisaram que ia exigir dedicação. Mas também falaram que seria demais, que seríamos contaminados pela cultura da colaboração e suporte. Estamos na terceira semana, mas já aprendemos sobre Unix, Bash, Git, aprendemos como funciona a Internet e tudo que acontece nos bastidores entre a tecla enter e o resultado da pesquisa.</p> 
+
+            <p>A Trybe se mostra muito interessada nos seus alunos, o que me deixa muito feliz e motivado para trilhar esse caminho que está apenas começando! #VamoQueVamo!</p> 
+            </article>
+    </section>
+    <footer id="rodape">
+        <p>Projeto Lessons Learned - por Luciano Lodi</p>
+    </footer>
+    
+    
 
 </body>
 </html>
