--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Lessons Learned</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+  <script src="https://kit.fontawesome.com/e718b707b4.js" crossorigin="anonymous"></script>
   <script src='main.js'></script>
 </head>
 <body>
@@ -49,6 +50,9 @@
       </ul>
     </section>
 
+    <footer id="rodape">
+      <p><i class="fas fa-code"></i> com 💜 por Leonardo Majevski &copy; 2020</p>
+    </footer>
   </main>
 </body>
 </html>
