Requisito 7 - adicionado um link para o github

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         <li>Algoritmos e estrutura de dados</li>
       </ul>
     </section>
+    <section>
+      <p>Link para acessar <a href="https://github.com/marcusWittho" target="_blank">meu GitHub</a> e acompanhar meu desenvolvimento durante o curso.</p>
+    </section>
   </main>
   <footer id="rodape">
     Desenvolvido especialmente por Marcus Lima Witthoeft.
