--- a/index.html
+++ b/index.html
@@ -13,7 +13,21 @@
             </h1>
         </header>
         <main>
-            <img id="minha_foto" src="brenno-calado.jpg" alt="Autor da página posando para uma foto com a mata de Brennand como plano de fundo">
+            <section>
+                <img id="minha_foto" src="brenno-calado.jpg" alt="Autor da página posando para uma foto com a mata de Brennand como plano de fundo">
+                <ol id="licoes_aprendidas">
+                    <li>Ligou o Ubuntu? Dê um <code>sudo apt-get upgrade</code>!</li>
+                    <li>Já deu o seu <code>commit -m</code> hoje? Opa, lá vem bomba...</li>
+                    <li><code>Ctrl-c ctrl-v?</code> dê um <code>cp</code> que o dedo agradece!</li>
+                    <li>Já usou camadas no Photoshop? No HTML tem o <code>z-index!</code></li>
+                    <li>não tá aparecendo o estilo css? Lembra da hierarquia: <code>tag < clas < id</code></li>
+                    <li>Cuidado com os <code>divs</code> infinitos!</li>
+                    <li><code>aside</code> não deixa o conteúdo 'aside' automagicamente</li>
+                    <li>Colocar vários emojis no texto vai deixar o leitor de tela maluco! 😅 </li>
+                    <li>Se o CSS te deixar perdido, o <code>display: flex</code> está ai para te ajudar</li>
+                    <li>Tá perdido? Não guarde as dúvidas para você!</li>
+                </ol>
+            </section>
         </main>
     </body>
 </html>
