float img, font size title, table nav

--- a/index.html
+++ b/index.html
@@ -10,22 +10,26 @@
     </head>
     <body>
         <header id="cabecalho">
-            <h1 id="titulo">titulo</h1>
+            <h1 id="titulo">Primeiro Projeto &#x1F680;</h1>
             <img src="https://rodrigoneoex.github.io/atual.jpeg" alt="homem camisa verde" id="minha_foto" width="200px">
             <nav id="headNav">
-                <a href="">Home</a>
-                <a href="">Reference</a>
-                <a href="">Contact</a>
+                <table>
+                    <tr>
+                        <td><a href="#titulo">Home</a></td>
+                        <td><a href="#footer">Reference</a></td>
+                        <td><a href="">Contact</a></td>
+                    </tr>
+                </table>
             </nav>
         </header>
         <main>
             <article>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur consequat quam, at scelerisque ante posuere a. Vestibulum eu dapibus felis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium felis ac odio faucibus imperdiet. Nunc tristique, sem ac commodo imperdiet, purus orci maximus elit, ac lacinia arcu nisi in metus. Vivamus congue enim orci, vel tristique orci pharetra non.</p>              
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur consequat quam, at scelerisque ante posuere a. Vestibulum eu dapibus felis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium felis ac odio faucibus imperdiet. Nunc tristique, sem ac commodo imperdiet, purus orci maximus elit, ac lacinia arcu nisi in metus. Vivamus congue enim orci, vel tristique orci pharetra non.</p>
             </article>
             <aside>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur consequat quam, at scelerisque ante posuere.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur consequat quam, at scelerisque ante posuere.</p> 
             </aside>
-            <section>            
+            <section>
                 <ol #licoes_aprendidas>
                     <li>Git</li>
                     <li>GitHub</li>
