--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <title>Título da página</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
   </head>
   <body>
     <header id="cabecalho">
         <h1>Licoes aprendidas</h1>
-        <nav>
+        <nav id="menu">
            <ul>
                <li>Home</li>
                <li>Login</li>
+               <li>Register</li>
+               <li>Alo</li>
            </ul> 
         </nav>
     </header>
@@ -30,6 +34,32 @@
             <li>Soft Skills</li>
             <li>Empatia</li>
         </ol>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
     </div>
   </body>
 </html>
