--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <header id="cabecalho">
         <h1 id="titulo">Caio Queiroz</h1>
     </header>
+    <img id="minha_foto" src="foto-caio.jpg" alt="Minha foto">
 </body>
 </html>
