Requisito 5 - Lista de lições a aprender

--- a/index.html
+++ b/index.html
@@ -12,18 +12,34 @@
     </header>
     <main>
         <img id="minha_foto" src="pics/profile-pic.jpeg" alt="Minha foto de perfil">
-        <ol id="licoes_aprendidas">
-            <li>Unix e Bash</li>
-            <li>Versionamento com Git</li>
-            <li>Sicronização do versionamento local com o Github</li>
-            <li>HTML básico</li>
-            <li>CSS Básico</li>
-            <li>Reuniões no Zoom</li>
-            <li>Desenvolvimento de soft skills</li>
-            <li>Desenvolvimento do lado designer</li>
-            <li>Descobrimos quem é o Faraó</li>
-            <li>Aprendemos a nos questionar que animal seríamos</li>
-        </ol>
+        <section>
+            <ol id="licoes_aprendidas">
+                <li>Unix e Bash</li>
+                <li>Versionamento com Git</li>
+                <li>Sicronização do versionamento local com o Github</li>
+                <li>HTML básico</li>
+                <li>CSS Básico</li>
+                <li>Reuniões no Zoom</li>
+                <li>Desenvolvimento de soft skills</li>
+                <li>Desenvolvimento do lado designer</li>
+                <li>Descobrimos quem é o Faraó</li>
+                <li>Aprendemos a nos questionar que animal seríamos</li>
+            </ol>
+        </section>
+        <section>
+            <ul id="licoes_a_aprender">
+                <li>JavaScript</li>
+                <li>Flexbox</li>
+                <li>Grid</li>
+                <li>Testes de softwares</li>
+                <li>React</li>
+                <li>Consumo de APIs</li>
+                <li>Bancos de dados relacionais</li>
+                <li>Bancos de dados não relacionais</li>
+                <li>Python</li>
+                <li>Mais sobre soft skills</li>
+            </ul>
+        </section>
     </main>
 </body>
 </html>
