--- a/index.html
+++ b/index.html
@@ -24,5 +24,19 @@
                 <li>HTML Semântico</li>
             </ol>
         </section>
+        <section>
+            <ol id="licoes_a_aprender">
+                <li>Javascript</li>
+                <li>React</li>
+                <li>Metodologias Ágeis</li>
+                <li>Redux</li>
+                <li>SQL</li>
+                <li>MongoDB</li>
+                <li>NodeJS</li>
+                <li>Frameworks</li>
+                <li>Python</li>
+                <li>Soft Skills</li>
+            </ol>
+        </section>
     </body>
 </html>
