Adiciona nova foto com tamanho reduzido

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </header>
     <main>
         <article>
+            <img src="rsz_1rsz_20201004_155453.jpg" alt="minha foto" id="minha_foto">
             <section>
                 <ol id="licoes_aprendidas">
                     <li>Unix</li>
