adicionando o requisito 10 e correcoes em requisitos anteriores

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header id="cabecalho">
         <h1 id="titulo"> <a target="_blank" href="https://www.linkedin.com/in/marcelo-campos-3a13441bb/">Marcelo Campos</a></h1>
     </header>
-    <nav>
+    <nav class="horizontal-nav-bar">
         <ul>
             <li><a href="">Home</a></li>
             <li><a href="">Aprendizado</a></li>
@@ -18,16 +18,16 @@
         </ul>
     </nav>
     <main>
-        <article>
-            <section>
+        <section>
+            <article>
                 <p>Estou a poucas semanas na Trybe, mas sinto que meu aprendizado tem sido tão abrangente quanto meses de estudo. A metodologia de aprendizado ativa tem sido árdua e intensa, tem me deixado estressado e muito cansado, porém com o passar dos dias, me comparando com o Marcelo la dos welcome days, já vejo uma enorme diferença e me sinto muito orgulhoso de fazer parte da Trybe.</p>
-            </section>
-            <section>
-                <aside>
-                    <p>O nosso primeiro momento soft skills sobre autoconhecimento foi muito importante pra mim, me fez enxergar gatilhos e caminhos para amenizar problemas que me perseguem desde a minha entrada no mercado de trabalho.</p>
-                </aside>
-            </section>
-        </article>
+            </article>
+        </section>
+        <section>
+            <aside>
+                <p>O nosso primeiro momento soft skills sobre autoconhecimento foi muito importante pra mim, me fez enxergar gatilhos e caminhos para amenizar problemas que me perseguem desde a minha entrada no mercado de trabalho.</p>
+            </aside>
+        </section>
         <img id="minha_foto" src="images/me.jpg" alt="minha foto">
         <ol id="licoes_aprendidas">
             <li>Unix</li>
