--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li>Inspect</li>
             <li>Forms</li>
         </ol>
+        <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus a feugiat libero, sed tincidunt ex. Duis sed diam dolor. Sed in ligula ac neque feugiat maximus consectetur quis felis. Suspendisse potenti. Vestibulum nec erat vel urna vehicula ornare. Praesent at magna congue, convallis diam quis, rhoncus tellus. Proin ut erat pulvinar, imperdiet diam id, mattis felis. Cras et nisl tortor. Nunc ornare a neque ut lacinia. Nunc et congue diam. Fusce rhoncus neque at lectus accumsan nullam sodales.</article>
     </main>
     <footer id="rodape">
         <p>Link para o meu perfil no <a href="https://github.com/ChrisMoura2000" target="_blank" rel="external">GitHub</a></p>
