Adicionando link externo

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
       <figcaption class="profile-pic">Leonardo Majevski</figcaption>
     </figure>
 
+    <article>
+      <h3>#beTrybe!</h3>
+      <p>
+        Leo é aluno da <a href="betrybe.com" target="_blank">Trybe</a>. Faça como ele e não perca tempo, estude na melhor escola de programação da galáxia!
+      </p>
+    </article>
+
     <section>
       <h2>Licões aprendidas</h2>
       <ol id="licoes_aprendidas">
