--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
     <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
 </head>
   <img src="https://avatars1.githubusercontent.com/u/68447692?s=60&v=4" alt="foto kamila github">
+<ul>
+  <li>Git;</li>
+  <li> github;</li>
+  <li>HTML;</li>
+  <li>HTML Semântico;</li>     
+  <li>CSS.</li>
+</ul>
+
 </body>
 </html>
