Sexto e sétimo requisito

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
   <header id="cabecalho">
-    <h1 id="titulo">Lições aprendidas -Trybe</h1>
+    <h1 id="titulo">Lições aprendidas - Trybe</h1>
     <nav>
       <a href="" >Inicio</a>
-      <a href="" >Rodapé</a>
+      <a href="https://github.com/edersonrdg" target="_blank">Meu github</a>
     </nav>
   </header>
   <div id="page_content">
@@ -48,5 +48,6 @@
     <h2>SideBar</h2>
   </aside>
 </div>
+<footer><H4>Direitos reservados, Ederson</H4></footer>
 </body>
 </html>
