--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <header id="cabecalho">
       <nav>
         <h1 id="titulo">Lições Aprendidas</h1>
-
       </nav>
     </header>
 
@@ -19,7 +18,7 @@
     <img id="minha_foto" src="./img/perfil.jpg" alt="Foto do perfil">
 
 <!--  A lista deve ser numerada e possuir o ID "licoes_aprendidas" -->
-    <ul id="licoes_aprendidas">
+    <ol id="licoes_aprendidas">
 <!-- A lista deve possuir 10 itens -->
       <li>Linux</li>
       <li>Terminal</li>
@@ -31,7 +30,7 @@
       <li>SEO</li>
       <li>Colaboração</li>
       <li>Empatia</li>
-    </ul>
+    </ol>
 
 <!--  A lista deve ser numerada e possuir o ID "licoes_a_aprender" -->
     <ul id="licoes_a_aprender">
